# canopy

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: pyproject.toml
backend/canopy/: config.py  redis_client.py  weave_setup.py
backend/canopy/agents/: analyst.py  base.py  chat.py  lessons.py  llm.py  memory.py  skills.py  strategies.py  worker.py
backend/canopy/api/: agui.py  bench.py  control.py  main.py  meta.py  rest.py  state.py
backend/canopy/bench/: datasets.py  runner.py
backend/canopy/eval/: allocators.py  heldout.py  judge_audit.py  robustness.py  run_eval.py  stats.py
backend/canopy/jobs/: schema.py  seed.py
backend/canopy/market/: auction.py  collusion.py  escrow.py  events.py  ledger.py  lifecycle.py  matching.py  order_book.py  registry.py  reputation.py  settlement.py
backend/canopy/scoring/: holdout.py  leaderboard.py  monitors.py  scorers.py
backend/canopy/sim/: engine.py  phase0.py  shock.py
documentation/: additional_touches.md  demo_script.md  design_refresh_plan.md  devpost.md  eval_checkpoint.json  evaluation_plan.md  event_description.md  final_script.md  human_interaction_backend_plan.md  instructions.md  library_verification.md  next_steps.md  plan.md  police_and_learning_backend_plan.md  results.md  spec.md  subcontract_visibility_plan.md  suggestions.md  walkthrough.md  weavehacks_info.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppShell 2.tsx  AppShell.tsx  Arena.tsx  BidLeaderboard.tsx  ControlPanel.tsx  Empty.tsx  (+19 more)
(+11 files in other folders)
