[project]
name = "canopy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ag-ui-protocol>=0.1.19",
    "datasets>=5.0.0",
    "fastapi>=0.136.3",
    "openai>=2.41.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "redis[hiredis]>=7.0,<8",
    "redisvl>=0.16",
    "uvicorn[standard]>=0.49.0",
    "weave>=0.52.42",
]
